Build gem in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,6 @@ jobs:
       run: |
         ruby extconf.rb
         make
+    - name: Build gem
+      run: |
+        gem build huffman_tw.gemspec
